--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Eventme</string>
+    <string name="app_name_lowerCase">eventme</string>
 
     <!-- App Bar -->
     <string name="title_home">Home</string>
