Api logic: all finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
     <string name="action_editProfile">Edit Profile</string>
     <string name="action_manageAccount">Manage Account</string>
     <string name="action_cancelNewEvent">Cancel New Event</string>
-    <string name="action_saveProfile">Save Profile</string>
     <string name="action_discardProfile">Discard Profile</string>
 
     <!-- Search Bar -->
@@ -45,6 +44,7 @@
 
     <!-- Toast -->
     <string name="toast_form_empty">Please, fill all the gaps</string>
+    <string name="toast_to_be_implemented">To be implemented...</string>
     <!-- API -->
     <string name="api_connection_failed">Connection to API failed!</string>
     <string name="api_login_failed">Invalid Credentials, please try again!</string>
@@ -56,11 +56,12 @@
     <string name="profile_friends">friends</string>
 
     <string name="profile_change_photo">Change Profile Photo</string>
-    <string name="profile_bio_hint">Bio</string>
+    <string name="profile_bio_hint">Bio (Not persisted)</string>
     <string name="profile_private">Private information</string>
     <string name="profile_old_password_hint">Old Password</string>
     <string name="profile_new_password_hint">New Password</string>
     <string name="profile_validate_password">Check New Password</string>
+    <string name="profile_save_changes">Save Changes</string>
 
     <!-- Login & Signup -->
     <string name="login_message">Login to Eventme</string>
